transferred to network

--- a/frontend/src/styles/note.module.css
+++ b/frontend/src/styles/note.module.css
@@ -1,5 +1,5 @@
 .noteCard{
-    background-color: coral;
+    background-color: rgb(108, 162, 248);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
