--- a/frontend/src/styles/NotesPage.module.css
+++ b/frontend/src/styles/NotesPage.module.css
@@ -9,3 +9,10 @@
 .note:hover{
     transform: scale(1.05);
 }
+
+.notesPage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
