--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+a.active{
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
+  text-shadow: 3px 1px #000000;
+}
